# mangaviewer_rust_angular

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  .prettierignore  ADVANCED_SEARCH_FAVORITES.md  AI_FEATURES.md  AUTH_GUIDE.md  Cargo.toml  DEPLOY_GUIDE.md  DEPLOY_GUIDE.sh  DOCKER_DEPLOYMENT.md  Dockerfile  HIGH_PRIORITY_FEATURES.md  IMPROVEMENTS.md  LIBRARY_SETUP.md  NEW_FEATURES.md  READER_FEATURES.md  README.md  REDIS_CACHING.md  UI_UX_IMPROVEMENTS.md  angular.json  backup.sh  create_test_user.sh  demo_server.rs  deploy.sh  docker-compose.yml  eslint.config.mts  fly.toml  horimiya_chapters.json  horimiya_search.json  mock_data.rs  nginx.conf  package-lock.json  package.json  restore.sh  test_auth.sh  test_minimal.rs  test_simple.rs  (+1 more)
.github/workflows/: deploy.yml
src/: ai_service.rs  api.rs  api_backup.rs  auth.rs  auth_mongodb.rs  auth_simple.rs  cache.rs  cached_api.rs  database.rs  handlers.rs  index.html  main.rs  main.rs.backup  main.rs.corrupted  main_backup.rs  manga_service.rs  middleware.rs  pagination.rs  progress.rs  search.rs  styles.css  test_english_filtering.rs  validation.rs
src/app/: admin.guard.ts  apiservice.ts  app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts  auth.guard.ts  auth.service.ts  cover-image.service.ts  demo-data.service.ts  http-interceptor.service.ts  loading-spinner.component.ts  loading.service.ts  mock-auth.service.ts  theme.service.ts
src/app/admin/: admin.component.css  admin.component.html  admin.component.ts
src/app/admin-demo/: admin-demo.component.ts
src/app/auth/register/: register.component.css  register.component.html  register.component.ts
src/app/disclaimer/: disclaimer.component.ts
src/app/empty-state/: empty-state.component.ts
src/app/home/: home.css  home.html  home.ts
src/app/image-loader/: image-loader.component.ts
src/app/interfaces/: manga.ts
src/app/login/: login.css  login.html  login.ts
src/app/manga-detail/: manga-detail.component.ts  manga-detail.css  manga-detail.html  manga-detail.ts
src/app/manga-reader/: index.ts  manga-reader.component.css  manga-reader.component.html  manga-reader.component.ts
src/app/manga-search/: manga-search.css  manga-search.html  manga-search.ts
src/app/manga-viewer/: manga-viewer.css  manga-viewer.html  manga-viewer.ts
src/app/navbar/: navbar.component.ts
src/app/profile/: profile.css  profile.html  profile.ts
src/app/register/: register.css  register.html  register.ts
src/app/services/: mangadx.service.ts
src/app/skeleton-loader/: skeleton-loader.component.ts
src/config/: mod.rs
tests/: health_check.rs
