[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] } # Use features = ["macros"] for axum::extract::Query, Path, Json
tokio = { version = "1.36", features = ["full"] } # full features for main runtime, etc.

# HTTP Client for MangaDex API
reqwest = { version = "0.12", features = ["json"] }

# JSON Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0" # Good for general purpose error handling in main/top-level

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # For logging output
urlencoding = "2.1.3"
mongodb = "3.2.4"
dotenv = "0.15.0"

# Optional: Environment variables for base URLs or API keys
# dotenvy = "0.15"
