[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] } # Use features = ["macros"] for axum::extract::Query, Path, Json
tokio = { version = "1.36", features = ["full"] } # full features for main runtime, etc.

# HTTP Client for MangaDex API
reqwest = { version = "0.12", features = ["json"] }

# JSON Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0" # Good for general purpose error handling in main/top-level

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # For logging output
urlencoding = "2.1.3"
mongodb = "3.2.4"
dotenv = "0.15.0"

# Authentication dependencies
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP and CORS

# OpenAPI/Swagger documentation
utoipa = "4"
utoipa-swagger-ui = { version = "4", features = ["axum"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Optional: Environment variables for base URLs or API keys
# dotenvy = "0.15"

# Rate limiting and security
tower = { version = "0.4", features = ["limit", "buffer"] }
regex = "1.10"
once_cell = "1.19"
